Added new features
Added 201 Created Status Code in Enum Model.
Added Guid Id to Respond and SavedRecipe Models (because of database migration, which didn't want to be done "don't have Primary Key")
Added for this two Ids Configuration for PK.
Changed Generic Repository methods.
Changed all protected constructors to public (because of error during migration).
Implemented methods in Recipe Service (BLL).
Installed all packages that are needed.
Added Extension in Program.cs (Recipes.API) for clean code and added DI (DbContext, Repositories, Services).
Changed Settings for Swagger (only minor - title, version).
Changed launchsettings.json for urls and environment_variables (Production/Developer)
Added appsetings.Production.json for local connection string.
Added Methods for Recipe Controller

--- a/Recipes.API/Properties/launchSettings.json
+++ b/Recipes.API/Properties/launchSettings.json
@@ -36,6 +36,15 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
+    },
+    "Recipes.API": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "launchUrl": "swagger",
+      "applicationUrl": "http://localhost:5000;https://localhost:8000",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
     }
   }
 }
