--- a/Recipes.DAL/Recipes.DAL.csproj
+++ b/Recipes.DAL/Recipes.DAL.csproj
@@ -34,4 +34,8 @@
       <None Remove="Interfaces\ModelsRepositoriesInterfaces\**" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Migrations\" />
+    </ItemGroup>
+
 </Project>
