--- a/.gitignore
+++ b/.gitignore
@@ -483,3 +483,5 @@ $RECYCLE.BIN/
 # Vim temporary swap files
 *.swp
 /Recipes.API/appsettings.json
+/Recipes.API/appsettings.Production.json
+/Recipes.API/appsettings.Development.json
