--- a/Recipes.API/appsettings.Development.json
+++ b/Recipes.API/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "RecipesConnectionString": "Server=STEPAN;Database=RecipeDatabase;Trusted_Connection=SSPI;Encrypt=false;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
