--- a/Recipes.BLL/Recipes.BLL.csproj
+++ b/Recipes.BLL/Recipes.BLL.csproj
@@ -17,7 +17,11 @@
 
     <ItemGroup>
       <PackageReference Include="AutoMapper" Version="13.0.1" />
-      <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+      <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.16" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.16" />
+      <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="7.6.0" />
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+      <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.6.0" />
     </ItemGroup>
 
 </Project>
