--- a/Recipes.DAL/Recipes.DAL.csproj
+++ b/Recipes.DAL/Recipes.DAL.csproj
@@ -13,13 +13,15 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.16" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.16" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.16" />
-      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.16" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.16" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.16">
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         <PrivateAssets>all</PrivateAssets>
       </PackageReference>
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     </ItemGroup>
 
     <ItemGroup>
@@ -32,10 +34,6 @@
 
     <ItemGroup>
       <None Remove="Interfaces\ModelsRepositoriesInterfaces\**" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Migrations\" />
     </ItemGroup>
 
 </Project>
