--- a/Recipes.API/appsettings.json
+++ b/Recipes.API/appsettings.json
@@ -21,5 +21,7 @@
   "ResetPasswordMessage": "Please confirm your account by visiting the following URL:\r\n\r\n",
   "EmailHost": "smtp.gmail.com",
   "EmailHostPort": "465",
-  "EmailHostUseSsl": "true"
+  "EmailHostUseSsl": "true",
+  "GoogleClientID": "918933353446-5du1osk6eho7qlj1p122ejgve7kovvfc.apps.googleusercontent.com",
+  "GoogleClientSecret": "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"
 }
