--- a/Recipes.API/appsettings.json
+++ b/Recipes.API/appsettings.json
@@ -13,7 +13,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source = Recipes.db"
+    "DefaultConnection": "Data Source=localhost,1433;User ID=sa;Password=Qwerty123;Initial Catalog=ServiceStationIdentityServer;Encrypt=True;Trust Server Certificate=True;"
   },
   "EmailCompanyName": "Shopoyisty",
   "EmailCompanyAdress": "broccolicodeman.shopoyisty@gmail.com",
