--- a/Recipes.BLL/Recipes.BLL.csproj
+++ b/Recipes.BLL/Recipes.BLL.csproj
@@ -19,9 +19,9 @@
       <PackageReference Include="AutoMapper" Version="13.0.1" />
       <PackageReference Include="MailKit" Version="4.6.0" />
       <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.16" />
-      <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.16" />
       <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="7.6.0" />
-      <PackageReference Include="MimeKit" Version="4.6.0" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.16" />
+		<PackageReference Include="MimeKit" Version="4.6.0" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
       <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.6.0" />
     </ItemGroup>
