--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,13 +25,10 @@ services:
     ports:
       - 1488:8080
     environment:
-      - REDIS=RedisCash
       - DB_HOST=Database
       - DB_USER=sa
-      - DB_NAME=ServiceStationParts
+      - DB_NAME=ShoDatabase1.0
       - DB_SA_PASSWORD=Qwerty123
-      - RBBITMQ_USER= guest
-      - RBBITMQ_PASS= guest
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=https://+;http://+
       - ASPNETCORE_Kestrel__Certificates__Default__Password=hecysgsplf
