--- a/Recipes.API/Recipes.API.csproj
+++ b/Recipes.API/Recipes.API.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="FuzzySharp" Version="2.0.2" />
         <PackageReference Include="Google.Apis.Auth" Version="1.68.0" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.16" />
         <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.16" />
