--- a/Recipes.Data/Recipes.Data.csproj
+++ b/Recipes.Data/Recipes.Data.csproj
@@ -13,6 +13,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="FuzzySharp" Version="2.0.2" />
       <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.16" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.16" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
