--- a/Recipes.API/Recipes.API.csproj
+++ b/Recipes.API/Recipes.API.csproj
@@ -34,4 +34,8 @@
       <ProjectReference Include="..\Recipes.BLL\Recipes.BLL.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="SeedData\" />
+    </ItemGroup>
+
 </Project>
