--- a/FastAPIProject/requirements.txt
+++ b/FastAPIProject/requirements.txt
@@ -1,10 +1,13 @@
 fastapi
 uvicorn
 python-multipart
+ultralytics
+albumentations
+opencv-python-headless
 torch
 torchvision
-ultralytics
-opencv-python-headless
-albumentations
 numpy
-Pillow
+pillow
+matplotlib
+requests
+scipy
