--- a/Recipes.DAL/Recipes.DAL.csproj
+++ b/Recipes.DAL/Recipes.DAL.csproj
@@ -13,11 +13,11 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="CsvHelper" Version="33.1.0" />
       <PackageReference Include="FuzzySharp" Version="2.0.2" />
       <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.16" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.16" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.16" />
-      <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.16" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.16" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.16">
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
